--- a/.github/workflows/autograder.yml
+++ b/.github/workflows/autograder.yml
@@ -10,15 +10,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Download autograder script
-      run: |
-        wget https://github.com/CS2031-DBP/hackaton-0.git
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run autograder
+    - name: Run API script (api.py)
       run: |
-        test.py
+        python api.py & 
+    - name: Run tests (test.py)
+      run: |
+        python test.py 
