--- a/.github/workflows/autograder.yml
+++ b/.github/workflows/autograder.yml
@@ -13,11 +13,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
 
     - name: Run API script (api.py)
       run: |
-        python api.py & 
+        python api.py &  # Ejecuta api.py en segundo plano
+
     - name: Run tests (test.py)
       run: |
-        python test.py 
+        python test.py  # Ejecuta test.py para calificar api.py
